# MGC-Project

./: .gitmodules  CONFIG.md  LICENSE  README.md  Usecase.md  ethereum_common.sh  liability.sh  objective.bag  path.txt  road.model
car/: CMakeLists.txt  README.md  default.nix  package.xml
car/launch/: .cars.launch.swp  cars.launch  trader.launch  worker.launch
car/scripts/: trader_node
car/srv/: Permission.srv
duckie_nav/: CMakeLists.txt  default.nix  fetchNixpkgs.nix  package.xml  setup.py
duckie_nav/launch/: controller_alice.launch  controller_bob.launch  controller_charlie.launch
duckie_nav/scripts/: group_move_path
duckie_nav/srv/: SetGoal.srv
duckietown_description/meshes/: base.dae  battery.dae  ducky.dae  rubber_duck.dae  rubber_duck_new.dae  rubber_duck_ori.dae
duckietown_description/meshes/duck/: model.dae
duckietown_description/meshes/ferrari/: model.dae
duckietown_description/robots/: carvehicle.gazebo.xacro  carvehicle.urdf.xacro  catvehicle.gazebo.xacro  catvehicle.urdf.xacro  duckietown.gazebo.xacro
duckietown_gazebo/: CMakeLists.txt
duckietown_gazebo/launch/: demo_1_duckbot.launch  main.launch  mgc_3_duckbots.launch  spawn_catvehicle.launch  spawn_catvehicle.launch.xml  spawn_duckbot.launch
duckietown_gazebo/launch/include/: catvehicle.launch.xml  duckietown.launch.xml
duckietown_gazebo/models/duck/meshes/: model.dae
duckietown_gazebo/models/hosoi-sign/meshes/: hosoi-sign.dae
duckietown_gazebo/models/house_4/meshes/: BulfinchHotel.dae
duckietown_gazebo/models/how-sign/meshes/: how-streetsign.dae
duckietown_gazebo/models/intersection-sign/meshes/: intersection.dae
duckietown_gazebo/models/karaman-sign/meshes/: karaman-sign.dae
duckietown_gazebo/models/karaman-simple/meshes/: karaman-simple.dae
duckietown_gazebo/models/semaforo/meshes/: semaforo.dae
duckietown_gazebo/models/williams-sign/meshes/: williams-sign.dae
road_market_client/: CMakeLists.txt  default.nix  package.xml  setup.py
road_market_client/launch/: vehicle_1.launch  vehicle_2.launch  vehicle_3.launch
road_market_client/robonomics/: arrange.model
road_market_client/scripts/: trader_node  worker_node
traffic_management_client/: CMakeLists.txt  default.nix  package.xml  setup.py
traffic_management_client/launch/: perm_1.launch  perm_2.launch  perm_3.launch
traffic_management_client/scripts/: trader_node  worker_node
traffic_management_service/: CMakeLists.txt  default.nix  package.xml  setup.py
traffic_management_service/launch/: navigator.launch  registrator.launch
traffic_management_service/robonomics/: .Permissions_market.md.swo  AB_permission.model  Request_B.bag  Request_C.bag
traffic_management_service/scripts/: navigator_node  registrator_node
utm/: CMakeLists.txt  package.xml  setup.py
utm/robonomics/: Request_A.bag
utm/scripts/: trader_node  worker_node
vehicle/: CMakeLists.txt  default.nix  package.xml
vehicle/launch/: controller.launch  vehicle_1.launch  vehicle_2.launch
vehicle/scripts/: g2g_nav  group  trader_node
vehicle/srv/: SetGoal.srv
