<?xml version="1.0"?>
<package format="2">
  <name>duckie_nav</name>
  <version>0.1.1</version>
  <description>Duckbots navigation</description>

  <author email="a.khssnv@gmail.com">Alisher A. Khassanov</author>
  <maintainer email="akru@aira.lifel">Alexander Krupenkin</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
