<?xml version="1.0"?>
<package format="2">
  <name>Traffic management client</name>
  <version>0.1.0</version>
  <description>Unmanned traffic management serivce client package</description>
  <author email="a.khssnv@gmail.com">Alisher A. Khassanov</author>
  <maintainer email="akru@aira.life">Alexander Krupenkin</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robonomics_msgs</build_depend>
  <build_depend>robonomics_liability</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>robonomics_msgs</build_export_depend>
  <build_export_depend>robonomics_liability</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>robonomics_msgs</exec_depend>
  <exec_depend>robonomics_liability</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
